--- a/login copy.html
+++ b/login copy.html
@@ -12,10 +12,7 @@
     <title>Login</title>
 </head>
 <body>
-    <img class="mediaphoto fade" src="./img/IMG_20220201_130337.jpg" alt="mediaphoto">
-    <img class="mediaphoto fade" src="./img/IMG_20220201_130437.jpg" alt="mediaphoto">
-    <img class="mediaphoto fade" src="./img/IMG_20220201_130248.jpg" alt="mediaphoto">
-    <img class="mediaphoto fade" src="./img/IMG_20220201_130203.jpg" alt="mediaphoto">
+    <img class="mediaphoto" src="./img/IMG_20220201_130337.jpg" alt="mediaphoto">
     
     <div class="container">
             <div class="login-container">
@@ -45,7 +42,6 @@
                 </form>
             </div>
     </div>
-    <script type="text/javascript" src="./secondary.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
